--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "dependencies": {
     "gulp": "^3.9.1",
-    "gulp-less": "^3.3.0"
+    "gulp-ejs": "^3.0.1",
+    "gulp-less": "^3.3.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.6.1"
   }
 }
